--- a/index.css
+++ b/index.css
@@ -1,3 +1,35 @@
 #heading {
     color: red;
 }
+
+.header {
+    padding-right: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid black;
+}
+
+.logo {
+    width: 200px;
+}
+
+.nav-item > ul {
+    display: flex;
+    list-style: none;
+}
+
+.nav-item > ul > li {
+    padding-right: 20px;
+    font-size: 24px;
+}
+
+.Search {
+    padding: 10px;
+}
+
+.res-card {
+    width: 200px;
+    height: 300px;
+    border: 1px solid black;
+}
