--- a/index.css
+++ b/index.css
@@ -28,8 +28,33 @@
     padding: 10px;
 }
 
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+
 .res-card {
+    position: relative;
     width: 200px;
-    height: 300px;
+    height: 330px;
+    padding: 10px;
+}
+
+.res-card::before {
+    position: absolute;
+    content: "";
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.res-card:hover::before {
+    cursor: pointer;
     border: 1px solid black;
+}
+
+.res-logo {
+    width: 100%;
 }
