--- a/index.css
+++ b/index.css
@@ -1,102 +1,3 @@
-#heading {
-    color: red;
-}
-
-.header {
-    padding-right: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid black;
-}
-
-.logo {
-    width: 200px;
-}
-
-.nav-item > ul {
-    display: flex;
-    list-style: none;
-}
-
-.nav-item > ul > li {
-    padding-right: 20px;
-    font-size: 24px;
-    align-self: center;
-}
-
-.Search {
-    padding: 10px;
-}
-
-.res-container {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-
-.res-card {
-    position: relative;
-    width: 200px;
-    padding: 10px;
-}
-
-.res-card::before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-}
-
-.res-card:hover::before {
-    cursor: pointer;
-    border: 1px solid black;
-}
-
-.res-logo {
-    width: 100%;
-    aspect-ratio: 16/9;
-}
-
-.filter-btn {
-    margin-block: 10px;
-    cursor: pointer;
-}
-
-/* Shimmer */
-.shimmer-container {
-    margin-block: 10px;
-    margin-inline: auto;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, 220px);
-    gap: 10px;
-}
-
-.shimmer-btn {
-    width: 100px;
-    height: 20px;
-    margin-block: 10px;
-}
-
-.shimmer-card {
-    height: 350px;
-    background-color: #f0f0f0;
-}
-
-.login {
-    width: 90px;
-    padding: 10px;
-    cursor: pointer;
-}
-
-.filter {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row-reverse;
-}
-
-.search-box {
-    margin-block: 10px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
